# PKL-GuidedDiffusion

./: .editorconfig  .gitignore  =0.24.0  BASELINE_COMPARISON_SUMMARY.md  CLOUD_SERVER_SETUP.md  COLAB_SETUP_GUIDE.md  DDIM_IMPLEMENTATION_SUMMARY.md  E2E_TESTING_SUMMARY.md  Makefile  README.md  REAL_DATA_PROCESSING_SUMMARY.md  TASK_1_2_SUMMARY.md  WFto2P_DataProcessing_SUMMARY.md  create_final_all_denoised.py  ddpm.py  pyproject.toml  pytest.ini  reconstruct_complete.py  requirements.txt  research_plan.md  setup.py  test_enhancement_simple.py  test_enhancement_task_2_2.py
.hydra/: config.yaml  hydra.yaml  overrides.yaml
configs/: baseline_comparison.yaml  config.yaml  config_colab.yaml  config_real.yaml  config_real_adaptive.yaml
docs/: BASELINE_COMPARISON.md  E2E_TESTING_GUIDE.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_NOTES.md  QUICKSTART.md  SOFTWARE_ARCHITECTURE.md  enhancement.md
examples/: baseline_comparison_example.py
notebooks/: colab_training.ipynb
pkl_dg/: __init__.py
scripts/: _rcan_train_infer.py  _sup_unet_train_infer.py  baseline_comparison_full_fov.py  build_zarr_patches.py  create_frame_based_splits.py  ddp.md  download_data.py  evaluate.py  evaluate_fov_baselines.py  infer_rcan.py  infer_rl.py  inference.py  launch_multidomain_tmux.sh  make_previews.py  overnight_run.sh  prepare_images.py  prepare_tif_subset.py  preprocess_all.py  process_microscopy_data.py  process_real_data.py  resume_training_colab.py  resume_training_real.py  run_all_experiments_tmux.sh  run_baseline_comparison.py  run_e2e_tests.py  setup_colab_environment.py  stitch_patches.py  synthesize_data.py  test_baseline_comparison.py  train_diffusion.py  train_diffusion_colab.py  train_mnist.py  train_multidomain.py  train_real.py  train_real_data.py  train_supunet_rcan_tmux.sh  visualize_real_data.py
tests/: conftest.py  conftest_e2e.py  test_data_synthesis.py  (+27 more)
(+62 files in other folders)
