[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkl-diffusion-denoising"
version = "0.1.0"
description = "PKL-Guided Diffusion for Microscopy Denoising"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "torchaudio>=0.9.0",
    "hydra-core>=1.1.0",
    "omegaconf>=2.1.0",
    "wandb>=0.12.0",
    "diffusers>=0.10.0",
    "accelerate>=0.12.0",
    "pytorch-lightning>=1.6.0",
    "tensorboard>=2.8.0",
    "pillow>=8.3.0",
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/annahayoon/PKL-GuidedDiffusion"
Repository = "https://github.com/annahayoon/PKL-GuidedDiffusion"
Issues = "https://github.com/annahayoon/PKL-GuidedDiffusion/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pkl_dg*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
